séparation tests et jeu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ project(MyProject)
 set(CMAKE_CXX_STANDARD 20)
 
 # Add a subdirectory for each project
-add_subdirectory(proj_test)
+add_subdirectory(casino_game)
+add_subdirectory(tests_proba)
